# linlang

./: README.md  linlang.cabal
examples/: array.txt  example-lin.txt  example.txt  example2.txt
src/: AST.hs  Desugar.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  TypeCheck.hs
