cabal-version:   3.0
name:            linlang
version:         0.1.0.0
license:         BSD-3-Clause
build-type:      Simple

executable linlang
  main-is: Main.hs
  other-modules:
    AST
    Desugar
    Eval
    Parser
    Pretty
    TypeCheck
  build-depends:
    base >= 4.16,
    containers,
    parsec,
    prettyprinter,
    text,
    transformers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
